--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,14 @@
 .jumbotron {
-    background-color: #3f6f9c;
+    padding-top: 100px;
+    background-color: #2e4f70;
     color: ghostwhite;
 }
 .footer {
     margin: 10px;
     padding: 10px;
-    background-color: #9cb9d4;
+    background-color: #b2cbe2;
 }
-.rowCustom {
+.row-header {
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
@@ -15,4 +16,8 @@
 .hist {
     margin-top: 50px;
     margin-bottom: 50px;
+}
+.body {
+    padding-top: 50px;
+    z-index : 0;
 }
