--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,10 @@
     padding-top: 50px;
     z-index : 0;
 }
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 10px;
+}
