--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,24 @@
     padding: 10px;
     margin-bottom: 10px;
 }
+.carousel {
+    background:#512DA8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
+.btnCustom {
+    margin-left: 5px;
+}
+.form-row {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
