--- a/css/styles.css
+++ b/css/styles.css
@@ -1,57 +1,78 @@
-.jumbotron {
-    padding-top: 100px;
-    background-color: #2e4f70;
-    color: ghostwhite;
-}
-.footer {
-    margin: 10px;
-    padding: 10px;
-    background-color: #b2cbe2;
-}
 .row-header {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-}
-.hist {
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-.body {
-    padding-top: 50px;
-    z-index : 0;
-}
-.tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-.carousel {
-    background:#512DA8;
+  margin: 0px auto;
+  padding: 0px 0px;
 }
 
-.carousel-item {
+.row-content {
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
+}
+
+.footer {
+  background-color: #D1C4E9;
+  margin: 0px auto;
+  padding: 20px 0px;
+}
+
+.jumbotron {
+  margin: 0px auto;
+  padding: 70px 30px;
+  background: #9575CD;
+  color: floralwhite;
+}
+
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
+}
+
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 0;
+}
+
+.navbar-dark {
+  background-color: #512DA8;
+}
+
+.tab-content {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+}
+
+.carousel {
+  background: #512DA8;
+}
+
+.carousel .carousel-item {
   height: 300px;
 }
 
-.carousel-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+.carousel .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
 }
-.btnCustom {
-    margin-left: 5px;
-}
-.form-row {
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
+
 #carouselButton {
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
-    z-index: 1;
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
 }
+
+.modal-content .modal-header {
+  background-color: #512DA8;
+  color: floralwhite;
+}
+
+.modal-content .modal-body {
+  background-color: #D1C4E9;
+}
+/*# sourceMappingURL=styles.css.map */
