End of the course

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,4 +75,8 @@ body {
 .modal-content .modal-body {
   background-color: #D1C4E9;
 }
+
+.modal-content .button {
+  color: floralwhite;
+}
 /*# sourceMappingURL=styles.css.map */
